// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with long date without snippets 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
            id="modalFollowupLabel"
          >
            Document
          </h4>
        </div>
        <div
          className="modal-body"
        >
          <div
            className="well well-accent followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-3 text-center"
              >
                <img
                  alt="Document title"
                  className="img-responsive center-block offset-bottom"
                  src="http://www.example.com/image.jpg"
                />
                <button
                  className="btn btn-default btn-default-alt"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
              <div
                className="col-sm-8"
              >
                <h4
                  className="well-title"
                >
                  Document title
                </h4>
                <p>
                  Author of document
                </p>
                <p
                  className="small"
                >
                  1 January 2017
                </p>
              </div>
            </div>
          </div>
          <hr />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with one snippet 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
            id="modalFollowupLabel"
          >
            Document
          </h4>
        </div>
        <div
          className="modal-body"
        >
          <div
            className="well well-accent followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-3 text-center"
              >
                <img
                  alt="Document title"
                  className="img-responsive center-block offset-bottom"
                  src="http://www.example.com/image.jpg"
                />
                <button
                  className="btn btn-default btn-default-alt"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
              <div
                className="col-sm-8"
              >
                <h4
                  className="well-title"
                >
                  Document title
                </h4>
                <p>
                  Author of document
                </p>
                <p
                  className="small"
                >
                  1 January 2017
                </p>
              </div>
            </div>
          </div>
          <hr />
          <div
            className="well well-simple well-simple-light text-left well-heading"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Snippet",
                }
              }
            />
            <div
              className="offset-top-small offset-bottom-small"
            >
              <div
                className="row"
              >
                <div
                  className="col-sm-6 text-left"
                >
                  <div
                    className="offset-top-small"
                  >
                    <Reputation
                      dislikeAction={[Function]}
                      dislikeCount={0}
                      likeAction={[Function]}
                      likeCount={0}
                      voted={false}
                    />
                  </div>
                </div>
                <div
                  className="col-sm-6 text-right"
                >
                  <div
                    className="offset-top-small"
                  >
                    <RaisedButton
                      disabled={false}
                      label="Follow path"
                      onTouchTap={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with short date without snippets 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
            id="modalFollowupLabel"
          >
            Document
          </h4>
        </div>
        <div
          className="modal-body"
        >
          <div
            className="well well-accent followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-3 text-center"
              >
                <img
                  alt="Document title"
                  className="img-responsive center-block offset-bottom"
                  src="http://www.example.com/image.jpg"
                />
                <button
                  className="btn btn-default btn-default-alt"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
              <div
                className="col-sm-8"
              >
                <h4
                  className="well-title"
                >
                  Document title
                </h4>
                <p>
                  Author of document
                </p>
                <p
                  className="small"
                >
                  January 2017
                </p>
              </div>
            </div>
          </div>
          <hr />
        </div>
      </div>
    </div>
  </div>
</div>
`;
